Develop Admin Dashboard UI

--- a/sales_app/templates/base.html
+++ b/sales_app/templates/base.html
@@ -119,6 +119,7 @@
             <li><a href="{% url 'add_sale' %}">Додати продаж</a></li>
             <li><a href="{% url 'leaderboard' %}">Таблиця лідерів</a></li>
             <li><a href="{% url 'daily_stats' %}">Щоденна статистика</a></li>
+            <li><a href="{% url 'admin_dashboard' %}">Панель адміністратора</a></li>
             <li><a href="/admin/">Адмін-панель</a></li>
         </ul>
     </nav>
