--- a/sales_app/templates/sales_app/home.html
+++ b/sales_app/templates/sales_app/home.html
@@ -59,5 +59,6 @@
     <a href="{% url 'add_sale' %}" class="btn">Додати продаж</a>
     <a href="{% url 'sales_list' %}" class="btn" style="background-color: #2196F3;">Переглянути всі продажі</a>
     <a href="{% url 'leaderboard' %}" class="btn" style="background-color: #FF9800;">Таблиця лідерів</a>
+    <a href="{% url 'admin_dashboard' %}" class="btn" style="background-color: #4CAF50;">Панель адміністратора</a>
 </p>
 {% endblock %}
